fixed spacing

--- a/src/components/Survey.css
+++ b/src/components/Survey.css
@@ -17,7 +17,7 @@
   
   .radio-group {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     gap: 10px;
   }
   
